--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pousada Secreta</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap">
 </head>
 <body>
     <!--Topo-->
-    <div>
-        <div>
+    <div class="topo">
+        <div class="secao-tamanho-maximo container">
+         <a href="index.html" class="link-logotipo">Pousada <span>Secreta</span></a>
             <div>
-                <a href="#index.html">Pousada <span>Secreta</span></a>
-            </div>
-            <div>
-                <a href="#sobre">SOBRE</a>
-                <a href="#rota">ROTA</a>
-                <a href="#quartos">QUARTOS</a>
+                <a class="link-topo" href="#sobre">SOBRE</a>
+                <a class="link-topo" href="#rota">ROTA</a>
+                <a class="link-topo" href="#quartos">QUARTOS</a>
             </div>
         </div>
     </div>
     <!--End Topo-->
     <!--Conteudo-->
-    <div>
-        <div>
+    <div class="secao-conteudo">
+        <div class="secao-destaque">
             <h1>Pousada Secreta</h1>
             <p>A pousada reservada em Angra dos Reis</p>
         </div>
@@ -52,14 +52,14 @@
             <a href="#">Quarto de Familia</a>
         </div>
     </div>
-    <div>
+    <div id="rota">
         <h1>Rota</h1>
         <p>Veja como chegar até a pousada</p>
         <div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7522545.515936249!2d-52.592706724999964!3d-22.982690599999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2c2293fa63%3A0x539cb07246f0e38d!2sVia%20Parque%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1688182349654!5m2!1spt-BR!2sbr" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
-    <div>
+    <div id="sobre">
         <h1>Sobre a Pousada</h1>
         <p>Conheça um pouco sobre a nossa pousada</p>
     </div>
@@ -101,13 +101,13 @@
                 <h3>Entre em contato conosco:</h3>
             </div>
             <div>
-                <a href="#">Endereço Av.123,222 - Rio de Janeiro RJ</a>
+                <a href="https://goo.gl/maps/KxP4aZWSa54aW2VGA" target="_blank">Endereço Av.123,222 - Rio de Janeiro RJ</a>
             </div>
             <div>
                 <p>Cel: 5521000000000</p>
             </div>
             <div>
-                <a href="#">Faça sua reserva pelo Booking.com</a>
+                <a href="https://www.booking.com" target="_blank">Faça sua reserva pelo Booking.com</a>
             </div>            
         </div>
         <div>
