--- a/index.html
+++ b/index.html
@@ -21,75 +21,81 @@
     </div>
     <!--End Topo-->
     <!--Conteudo-->
+    <!--Destaque-->
     <div class="secao-conteudo">
-        <div class="secao-destaque">
-            <h1>Pousada Secreta</h1>
-            <p>A pousada reservada em Angra dos Reis</p>
+        <div class="titulo-site">
+            <div class="titulo-site-descricao">
+                <h1>Pousada Secreta</h1>
+                <p>A pousada reservada em Angra dos Reis</p>
+            </div>
         </div>
-        <div>
-            <h1>Seja bem-vindo(a)!</h1>
+    <!--End Destaque-->
+    <!--Boa Vindas-->
+        <div class="secao-tamanho-maximo secao-container">
+            <h2>Seja bem-vindo(a)!</h2>
             <p>Relaxe em nossas acomodações e curta o melhor de Angra dos Reis</p>
-            <p>Temos quartos para solteiro, casal ou família</p>
+            <p>Temos quartos para solteiro, casal ou família</p>            
         </div>
-    </div>
-    <div>
-        <div>
-            <div>
-                <img src="assets/quarto-solteiro1.jpg" alt="quarto-solteiro1">
+        <div class="quartos secao-tamanho-maximo">
+            <div class="quarto">                
+                <img src="assets/quarto-solteiro1.jpg" alt="quarto-solteiro1">                
+                <a href="#">
+                <p>Quarto de Solteiro</p>
+                </a>
             </div>
-            <a href="#">Quarto de Solteiro</a>
-        </div>
-        <div>
-            <div>
-                <img src="assets/quarto-casal1.jpg" alt="quarto-casal1">
+            <div class="quarto">                
+                <img src="assets/quarto-casal1.jpg" alt="quarto-casal1">                
+                <a href="#">
+                <p>Quarto de Casal</p>
+                </a>
             </div>
-            <a href="#">Quarto de Casal</a>
-        </div>
-        <div>
-            <div>
-                <img src="assets/quarto-familia1.jpg" alt="quarto-familia1">
+            <div class="quarto">                
+                <img src="assets/quarto-familia1.jpg" alt="quarto-familia1">            
+                <a href="#">
+                <p>Quarto Familia</p>
+                </a>
             </div>
-            <a href="#">Quarto de Familia</a>
         </div>
-    </div>
-    <div id="rota">
-        <h1>Rota</h1>
-        <p>Veja como chegar até a pousada</p>
-        <div>
+        <div id="rota" class="secao-tamanho-maximo secao-bem-vindo secao-container">
+            <h2>Rota</h2>
+            <p>Veja como chegar até a pousada</p>
+        </div>
+        <div class="container-rota">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7522545.515936249!2d-52.592706724999964!3d-22.982690599999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2c2293fa63%3A0x539cb07246f0e38d!2sVia%20Parque%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1688182349654!5m2!1spt-BR!2sbr" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-    </div>
-    <div id="sobre">
-        <h1>Sobre a Pousada</h1>
-        <p>Conheça um pouco sobre a nossa pousada</p>
-    </div>
-    <div>
-        <div>
-           <h2>A pousada</h2>
-           <p>A Pousada Dev dispõe de estacionamento privativo gratuito, piscina ao ar livre e bar.</p>
-           <div>
-                <img src="assets/img1.jpg" alt="piscina">
-           </div> 
+        
+        <div id="sobre" class="secao-tamanho-maximo secao-container container-descricao">
+            <h1>Sobre a Pousada</h1>
+            <p>Conheça um pouco sobre a nossa pousada</p>
         </div>
-        <div>
-            <h2>Nossos quartos</h2>
-            <p>Os quartos possuem TV de tela plana a cabo, cozinha compcta e área para refeições. Além disso, as unidades da Pousada Dev contam com ar-condicionado e guarda-roupa</p>
-            <div>
-                <img src="assets/img2.jpg" alt="quartos">
+        <div class="secao-tamanho-maximo descricoes">
+            <div class="descricao">
+                <div class="descricao-conteudo">
+                    <h2>A pousada</h2>
+                    <p>A Pousada Dev dispõe de estacionamento privativo gratuito, piscina ao ar livre e bar.</p>
+                </div>
+                <img class="descricao-img" src="assets/img1.jpg" alt="piscina">             
             </div>
-        </div>
-        <div>
-            <h2>Alimentação</h2>
-            <p>A pousada serve café da manhã em estilo continental ou buffet. Nossos resturantes funcionam 24hrs.</p>
-            <div>
-                <img src="assets/img3.jpg" alt="resturantes">
+            <div class="descricao">
+                <div class="descricao-conteudo">
+                    <h2>Nossos quartos</h2>
+                    <p>Os quartos possuem TV de tela plana a cabo, cozinha compcta e área para refeições. Além disso, as unidades da Pousada Dev contam com ar-condicionado e guarda-roupa</p>
+                </div>                
+                    <img class="descricao-img" src="assets/img2.jpg" alt="quartos">                
             </div>
-        </div>
-        <div>
-            <h2>Recepção</h2>
-            <p>Nossa recepão fica aberta 24hrs.</p>
-            <div>
-                <img src="assets/img5.jpg" alt="receção">
+            <div class="descricao">
+                <div class="descricao-conteudo">
+                    <h2>Alimentação</h2>
+                    <p>A pousada serve café da manhã em estilo continental ou buffet. Nossos resturantes funcionam 24hrs.</p>
+                </div>                
+                    <img class="descricao-img" src="assets/img3.jpg" alt="resturantes">                
+            </div>
+            <div class="descricao">
+                <div class="descricao-conteudo">                
+                    <h2>Recepção</h2>
+                    <p>Nossa recepção fica aberta 24hrs.</p>
+                </div>                
+                <img class="descricao-img" src="assets/img5.jpg" alt="recepção">                
             </div>
         </div>
     </div>
