--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
         <div class="secao-tamanho-maximo descricoes">
             <div class="descricao">
                 <div class="descricao-conteudo">
-                    <h2>A pousada</h2>
+                    <h3>A pousada</h3>
                     <p>A Pousada Dev dispõe de estacionamento privativo gratuito, piscina ao ar livre e bar.</p>
                 </div>
                 <img class="descricao-img" src="assets/img1.jpg" alt="piscina">             
             </div>
             <div class="descricao">
                 <div class="descricao-conteudo">
-                    <h2>Nossos quartos</h2>
+                    <h3>Nossos quartos</h3>
                     <p>Os quartos possuem TV de tela plana a cabo, cozinha compcta e área para refeições. Além disso, as unidades da Pousada Dev contam com ar-condicionado e guarda-roupa</p>
                 </div>                
                     <img class="descricao-img" src="assets/img2.jpg" alt="quartos">                
             </div>
             <div class="descricao">
                 <div class="descricao-conteudo">
-                    <h2>Alimentação</h2>
+                    <h3>Alimentação</h3>
                     <p>A pousada serve café da manhã em estilo continental ou buffet. Nossos resturantes funcionam 24hrs.</p>
                 </div>                
                     <img class="descricao-img" src="assets/img3.jpg" alt="resturantes">                
             </div>
             <div class="descricao">
                 <div class="descricao-conteudo">                
-                    <h2>Recepção</h2>
+                    <h3>Recepção</h3>
                     <p>Nossa recepção fica aberta 24hrs.</p>
                 </div>                
                 <img class="descricao-img" src="assets/img5.jpg" alt="recepção">                
@@ -101,23 +101,27 @@
     </div>
     <!--End Conteudo-->
     <!--Rodapé-->
-    <div>
-        <div>
-            <div>
-                <h3>Entre em contato conosco:</h3>
-            </div>
-            <div>
-                <a href="https://goo.gl/maps/KxP4aZWSa54aW2VGA" target="_blank">Endereço Av.123,222 - Rio de Janeiro RJ</a>
-            </div>
-            <div>
+    <div class="rodape">
+        <div class="secao-tamanho-maximo rodape-container">
+            <div class="rodape-info">
+                <h4>Entre em contato conosco:</h4>
+            </div>            
+                <a class="rodape-info rodape-link" href="https://goo.gl/maps/KxP4aZWSa54aW2VGA" target="_blank">
+                <img class="rodape-icone" src="assets/icone/endereco.png" alt="icone endereço" title="icone Endereço">
+                <p>Endereço Av. 123, 222 - Rio de Janeiro RJ</p>
+                </a>
+            <div class="rodape-info">
+                <img class="rodape-icone" src="assets/icone/telefone.png" alt="icone telefone" title="Icone telefone">
                 <p>Cel: 5521000000000</p>
             </div>
-            <div>
-                <a href="https://www.booking.com" target="_blank">Faça sua reserva pelo Booking.com</a>
-            </div>            
-        </div>
-        <div>
-            <p>&copy;Copyright - PousadaDev</p>
+
+                <a class="rodape-info rodape-link" href="https://www.booking.com/searchresults.pt-br.html?aid=375635;label=msn-wLZ0m4wRNI00wFHQAaaO3w-79920787059858%3Atikwd-79920803013016%3Aaud-808219487%3Aloc-20%3Aneo%3Amte%3Adec%3Aqsbooking;sid=9ca5cbe6c9db71b34b98c0738ea780f4;dest_id=-666610;dest_type=city&" target="_blank">
+                    <img class="rodape-icone" src="assets/icone/calendario.png" alt="icone calendário" title="Icone de calendário">
+                    <p>Faça sua reserva pelo Booking.com</p>
+                </a>                        
+                <div class="rodape-copyright">
+                    <p>&copy;Copyright - PousadaDev</p>
+                </div>
         </div>
     </div>    
 </body>
