Criação da página quartos e estilização

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div>
                 <a class="link-topo" href="#sobre">SOBRE</a>
                 <a class="link-topo" href="#rota">ROTA</a>
-                <a class="link-topo" href="#quartos">QUARTOS</a>
+                <a class="link-topo" href="quartos.html">QUARTOS</a>
             </div>
         </div>
     </div>
@@ -39,19 +39,19 @@
         <div class="quartos secao-tamanho-maximo">
             <div class="quarto">                
                 <img src="assets/quarto-solteiro1.jpg" alt="quarto-solteiro1">                
-                <a href="#">
+                <a href="quartos.html#solteiro">
                 <p>Quarto de Solteiro</p>
                 </a>
             </div>
             <div class="quarto">                
                 <img src="assets/quarto-casal1.jpg" alt="quarto-casal1">                
-                <a href="#">
+                <a href="quartos.html#casal">
                 <p>Quarto de Casal</p>
                 </a>
             </div>
             <div class="quarto">                
                 <img src="assets/quarto-familia1.jpg" alt="quarto-familia1">            
-                <a href="#">
+                <a href="quartos.html#familia">
                 <p>Quarto Familia</p>
                 </a>
             </div>
